--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@
     </div>
     <div class="center-column">
       <div class="logo">
-        <h1>Lucy's Diner</h1>
+        <h1>Lucy's Amazing Diner</h1>
       </div>
     </div>
     <div class="right-column">
