--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <div class="header">
+    <div class="headerss">
       <div class="left-column">
         <div class="social-media-links">
           <div class="facebook-link">
