--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <div class="headers">
+  <div class="header">
     <div class="left-column">
       <div class="social-media-links">
         <div class="facebook-link">
